# magic-haskell

./: .gitignore  CHANGELOG.md  README.md  magic.cabal  stack-ghc-9.10.yaml  stack-ghc-9.12.yaml  stack-ghc-9.6.yaml  stack-ghc-9.8.yaml  stack.yaml
.github/workflows/: ci.yaml
src/: Magic.hs
src/Magic/: Data.hsc  FilePath.hs  Init.hsc  Internal.hs  Operations.hsc  Types.hsc  TypesLL.hs  Utils.hsc
test/: Inittest.hs  Tests.hs  runtests.hs
utils/: genconsts.hs
